feat : add new endpoint auth/update-profile & auth/update-password
