# src/controllers/auth.controller.ts
@@ -1,47 +1,58 @@
 import { Request, Response } from "express";
 import * as yup from "yup";
-import UserModel from "../models/user.model";
+import UserModel, { userDTO, userLoginDTO, userUpdatePasswordDTO } from "../models/user.model";
 import { encrypt } from "../utils/encryption";
 import { IReqUser } from "../utils/interface";
 import { generateToken } from "../utils/jwt";
 import response from "../utils/response";
 
-type TRegister = {
-    fullName: string;
-    username: string;
-    email: string;
-    password: string;
-    confirmPassword: string;
-};
-
-type TLogin = {
-    identifier: string;
-    password: string;
-};
-
-const registerValidateSchema = yup.object({
-    fullName: yup.string().required(),
-    username: yup.string().required(),
-    email: yup.string().required(),
-    password: yup.string().required().min(6, "Password must be at least 6 characters").test("password", "Password must contain at least one uppercase letter and one number",
-        (value) => {
-            if (!value) return false;
-            const regex = /^(?=.*[A-Z])(?=.*\d)/;
-            return regex.test(value);
-        }),
-    confirmPassword: yup.string().required().oneOf([yup.ref("password")], "Passwords not match"),
-});
-
 export default {
+
+    async updateProfile(req: IReqUser, res: Response) {
+        try {
+            const userId = req.user?.id;
+            const { fullName, profilePicture } = req.body;
+            const result = await UserModel.findByIdAndUpdate(userId, 
+                {fullName, profilePicture}, 
+                {new : true});
+
+            if (!result) return response.notFound(res, "User not found");
+            
+            response.success(res, result, "Update Profile Success");
+        } catch (error) {
+            response.error(res, error, "Update Profile Failed")
+        }
+    },
+
+    async updatePassword(req: IReqUser, res: Response) {
+        try {
+            const userId = req.user?.id;
+            const { oldPassword, password, confirmPassword } = req.body;
+            await userUpdatePasswordDTO.validate({
+                oldPassword,
+                password,
+                confirmPassword,
+            });
+
+            const user = await UserModel.findById(userId);
+            if (!user || user.password !== encrypt(oldPassword)) 
+                return response.notFound(res, "User not found");
+
+            const result = await UserModel.findByIdAndUpdate(userId, 
+                {password : encrypt(password)}, 
+                {new : true});
+            
+            response.success(res, result, "Update Password Success");
+        } catch (error) {
+            response.error(res, error, "Update Password Failed")
+        }
+    },
+
     async register(req: Request, res: Response) {
-        /**
-        #swagger.tags = ["Auth"]
-         */
-        const { fullName, username, email, password, confirmPassword } =
-            req.body as unknown as TRegister;
+        const { fullName, username, email, password, confirmPassword } = req.body;
 
         try {
-            await registerValidateSchema.validate({
+            await userDTO.validate({
                 fullName,
                 username,
                 email,
@@ -64,18 +75,12 @@ export default {
     },
 
     async login(req: Request, res: Response) {
-        /**
-        #swagger.tags = ["Auth"]
-        #swagger.requestBody = {
-            required: true,
-            schema: { $ref: "#/components/schemas/LoginRequest" }
-        }
-         */
-        const { identifier, password } =
-            req.body as unknown as TLogin;
-
         try {
-            //Ambil data user berdasarkan "identifier" -> email & username
+            const { identifier, password } = req.body;
+            await userLoginDTO.validate({
+                identifier,
+                password,
+            });
             const userByIdentifier = await UserModel.findOne({
                 $or: [
                     { email: identifier, },
@@ -95,6 +100,7 @@ export default {
             const token = generateToken({
                 id: userByIdentifier._id,
                 role: userByIdentifier.role,
+                createdAt: userByIdentifier.createdAt,
             });
 
             response.success(res, token, "User Login Success");
@@ -106,10 +112,6 @@ export default {
     },
 
     async me(req: IReqUser, res:Response) {
-        /**
-        #swagger.tags = ["Auth"]
-        #swagger.security = [{"bearerAuth": []}]
-         */
         try {
             const user = req.user;
             const result = await UserModel.findById(user?.id);
@@ -122,13 +124,6 @@ export default {
     },
 
     async activation (req: Request, res:Response) {
-        /**
-        #swagger.tags = ["Auth"]
-        #swagger.requestBody = {
-            required: true,
-            schema: { $ref: "#/components/schemas/ActivationRequest" }
-        }
-         */
         try {
             const { code } = req.body as { code:string };
 
@@ -138,12 +133,11 @@ export default {
                 isActive : true,
             }, {
                 new : true,
-            }
-        );
-        response.success(res, user, "User Activated Successfully");
-            
+            });
+            response.success(res, user, "User Activated Successfully");
         } catch (error) {
-            response.error(res, error, "User Activated Failed");
+            const err = error as unknown as Error;
+            response.error(res, err, "User Activated Failed");
         }
     }
 };
