# src/controllers/category.controller.ts
@@ -1,13 +1,13 @@
 import { Response } from "express";
 import { IReqUser, IPaginationQuery } from "../utils/interface";
-import CategoryModel, { categoryDAO } from "../models/category.model";
+import CategoryModel, { categoryDTO } from "../models/category.model";
 import response from "../utils/response";
 import { isValidObjectId } from "mongoose";
 
 export default {
   async create (req : IReqUser, res : Response) {
     try {
-      await categoryDAO.validate(req.body);
+      await categoryDTO.validate(req.body);
       const result = await CategoryModel.create(req.body);
       response.success(res, result, "success create a category");
     } catch (error) {
